plugins {
    id 'fabric-loom' version '1.9-SNAPSHOT'
    id 'maven-publish'
}


version = project.mod_version
group = project.maven_group

base {
    archivesName = project.archives_base_name
}

configurations {
    dependency
}


loom {
    accessWidenerPath = file('src/main/resources/example.accesswidener')
}

repositories {
    mavenCentral()
    // Add repositories to retrieve artifacts from in here.
    // You should only use this when depending on other mods because
    // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
    // See https://docs.gradle.org/current/userguide/declaring_repositories.html
    // for more information about repositories.
    maven {
        name = "FabricMC"
        url = "https://maven.fabricmc.net/"
    }

    maven {
        name = "Maven2 Repository"
        url = "https://repo.maven.apache.org/maven2"
    }

    maven {
        name = 'Jitpack'
        url = 'https://jitpack.io'
    }

    maven {
        name = 'clojars'
        url = 'https://clojars.org/repo/'
    }

    maven {
        name = 'sonatype'
        url = 'https://oss.sonatype.org/content/repositories/snapshots'
    }

    maven {
        url "https://mvnrepository.com/"
    }


    maven {
        url = uri("https://company/com/maven2")
    }
/*
   maven {
        name = 'IzzelAliz Maven'
        url = 'https://maven.izzel.io/releases/'
    }
 */
}

dependencies {
    // To change the versions see the gradle.properties file
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

    // Fabric API. This is technically optional, but you probably want it anyway.
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

    implementation 'com.google.code.gson:gson:2.8.9'
    implementation "com.mojang:brigadier:1.0.18"

    dependency("com.google.protobuf:protobuf-java:${protobuf_version}")
    dependency("com.google.protobuf:protobuf-java-util:${protobuf_version}")

    dependency("net.engio:mbassador:1.3.2")

    testImplementation("org.junit.jupiter:junit-jupiter-api:${jupiter_version}")
    testImplementation("org.junit.jupiter:junit-jupiter-engine:${jupiter_version}")
    testImplementation("org.junit.jupiter:junit-jupiter:${jupiter_version}")

    implementation group: 'io.github.humbleui', name: 'skija-shared', version: '0.116.4'
    implementation group: 'io.github.humbleui', name: 'skija-windows-x64', version: '0.116.4'
    implementation group: 'io.github.humbleui', name: 'types', version: '0.2.0'
    
    dependency("org.luaj:luaj-jse:3.0.1")

    dependency("net.raphimc:MinecraftAuth:4.1.1")

    dependency("org.java-websocket:Java-WebSocket:1.5.2")

    afterEvaluate {
        configurations.dependency.incoming.resolutionResult.allDependencies.each { dependency ->
            def compileOnlyApiDep = dependencies.compileOnlyApi(dependency.requested.toString()) {
                transitive = false
            }
            dependencies.include(compileOnlyApiDep)
            dependencies.implementation(compileOnlyApiDep)
        }
    }
}

processResources {
    inputs.property "version", project.version

    filesMatching("fabric.mod.json") {
        expand "version": project.version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 21
}

java {
    // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
    // if it is present.
    // If you remove this line, sources will not be generated.
    withSourcesJar()

    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

jar {
    from("LICENSE") {
        rename { "${it}_${project.base.archivesName.get()}" }
    }
}

// configure the maven publication
publishing {
    publications {
        create("mavenJava", MavenPublication) {
            artifactId = project.archives_base_name
            from components.java
        }
    }

    // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
    repositories {
        // Add repositories to publish to here.
        // Notice: This block does NOT have the same function as the block in the top level.
        // The repositories here will be used for publishing your artifact, not for
        // retrieving dependencies.
    }
}